fixing card on small devices

--- a/css/style.css
+++ b/css/style.css
@@ -683,7 +683,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -803,7 +804,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -874,8 +876,8 @@ body#Услуги footer {
       margin: 1.5rem auto;
       min-width: 299px;
       max-width: 360px;
-      height: 400px;
-      max-height: 405px;
+      min-height: 415px;
+      max-height: 420px;
       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
       border-radius: 50px;
       color: #333333;
@@ -885,7 +887,7 @@ body#Услуги footer {
       main section.one .threeCards .card:nth-child(1) .cardParag {
         padding-bottom: 60px; }
       main section.one .threeCards .card:nth-child(2) .cardParag {
-        padding-bottom: 10px; }
+        padding-bottom: 2px; }
       main section.one .threeCards .card:nth-child(3) .cardParag {
         padding-bottom: 95px; }
       main section.one .threeCards .card h3 {
@@ -1070,7 +1072,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -1320,7 +1323,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -1474,7 +1478,8 @@ body#Услуги footer {
       margin: 30px auto;
       min-width: 299px;
       max-width: 299px;
-      height: 400px;
+      min-height: 405px;
+      max-height: 420px;
       background: #FFFFFF;
       box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.35);
       border-radius: 50px;
@@ -1578,7 +1583,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -1625,7 +1631,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -1673,7 +1680,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
@@ -1691,7 +1699,8 @@ body#Услуги footer {
     background: #f4f4f4;
     overflow-y: scroll; }
   .showing {
-    max-height: 34em; }
+    max-height: 34em;
+    overflow-y: scroll; }
   nav ul li {
     box-sizing: border-box;
     width: 100%;
